<resources>
    <string name="app_name">Ahmed Task</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="recipe_details_preview">this is the recipes details, some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">ahmed</string>
    <string name="test_email">ahmed@ahmed.ahmed</string>
    <string name="text_home">BENVENUTO</string>
    <string name="text_entrar">Entrar</string>
    <string name="text_crear_cuenta">Crear una cuenta</string>
    <string name="text_registrate">Regístrate</string>
    <string name="text_sin_cuenta">¿No tienes una cuenta?</string>
    <string name="text_con_cuenta">¿Ya tienes una cuenta?</string>
    <string name="text_acceso_fb">ACCEDE CON FACEBOOK</string>
    <string name="text_acceso_gm">ACCEDE CON GOOGLE</string>
    <string name="text_acceso_apple">ACCEDE CON APPLE ID</string>
    <string name="text_acceso_email">ACCEDE CON EMAIL</string>

    <string name="text_recuperar_contrasena_title">¿Olvidaste tu contraseña?</string>
    <string name="text_forgotPass">RECUPÉRALA</string>
    <string name="text_btn_forgot_password">Enviar</string>

    <string name="text_registro_fb">REGÍSTRATE CON FACEBOOK</string>
    <string name="text_registro_gm">REGÍSTRATE CON GOOGLE</string>
    <string name="text_registro_apple">REGÍSTRATE CON APPLE ID</string>
    <string name="text_registro_email">REGÍSTRATE CON EMAIL</string>
    <string name="text_title_nombre">Nombres</string>
    <string name="text_title_apellidos">Apellidos</string>
    <string name="text_title_correo">Correo</string>
    <string name="text_title_contrasenia">Contraseña</string>
    <string name="text_title_confirm_contrasenia">Confirmar contraseña</string>

</resources>
