<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/background_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.task.ui.component.login.RegisterActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/space_24x"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="@dimen/space_24x"
        android:backgroundTint="@color/greenWhite"
        android:hint=""
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/greenWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_apellidos"
        android:textColor="@color/greenWhite"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_correo"
        android:textColor="@color/greenWhite"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_confirm_contrasenia"
        android:textColor="@color/greenWhite"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_nombre"
        android:textColor="@color/greenWhite"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/confirpassword"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/space_24x"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="@dimen/space_24x"
        android:backgroundTint="@color/greenWhite"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/greenWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.192" />

    <EditText
        android:id="@+id/password"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/space_24x"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="@dimen/space_24x"
        android:backgroundTint="@color/greenWhite"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/greenWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/emailuser"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/space_24x"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="@dimen/space_24x"
        android:backgroundTint="@color/greenWhite"
        android:hint=""
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/greenWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_contrasenia"
        android:textColor="@color/greenWhite"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/space_24x"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="@dimen/space_24x"
        android:backgroundTint="@color/greenWhite"
        android:hint=""
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/greenWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/registrar"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/space_48x"
        android:layout_marginTop="@dimen/space_16x"
        android:layout_marginEnd="@dimen/space_48x"
        android:layout_marginBottom="@dimen/space_64x"
        android:background="@drawable/estilo_fondo_boton_detalles"
        android:text="@string/text_registrate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.954" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="162dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/vapianologo" />

    <RelativeLayout
        android:id="@+id/loader_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>